--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 :root {
 	/* colors */
 	--clr-dark: #000814;
-	--clr-light: #fb8600ec;
+	--clr-light: #ee626b;
 	--clr-white: 0 0% 100%;
 	--clr-blue: #023047;
 	--clr-light-blue: #8ecae6;
@@ -29,8 +29,6 @@
 	--rich-gray: rgb(187, 183, 183);
 	--oxford-blue: #001d3dff;
 	--yale-blue: #003566ff;
-	--mikado-yellow: #ffc300ff;
-	--gold: #ffd60aff;
 
 	/* CSS HSL */
 	--rich-black: hsla(216, 100%, 4%, 1);
@@ -46,7 +44,7 @@
 	--fs-600: 1.5rem;
 	--fs-500: 1.25rem;
 	--fs-400: 1rem;
-	--fs-300: 0.9375rem;
+	--fs-300: 0.938rem;
 	--fs-200: 0.875rem;
 
 	/* font-families */
@@ -128,6 +126,31 @@ li {
 /* ------------------- */
 
 /* general */
+h2 {
+	font-size: 2.5rem;
+	text-align: center;
+	font-weight: 700;
+	line-height: 1.25;
+	padding-bottom: 1em;
+}
+
+h4 {
+	font-size: var(--fs-400);
+	font-weight: 600;
+	margin: 2em 0;
+}
+
+h6 {
+	text-transform: uppercase;
+	text-align: center;
+	color: var(--clr-light);
+	font-weight: 700;
+	font-size: var(--fs-300);
+	letter-spacing: 1px;
+	line-height: 1;
+	margin-bottom: 1.5em;
+}
+
 .flex {
 	display: flex;
 	gap: var(--gap, 1rem);
@@ -139,17 +162,47 @@ li {
 	max-width: 90%;
 }
 
-.btn__style {
+/* Button style */
+.btn__general {
 	display: inline-block;
 	cursor: pointer;
-	width: 10rem;
-	/* height: 2.6rem; */
+	width: 12rem;
 	padding: 0.6em 1rem;
 	border-radius: 2rem;
 	border: none;
 	background: var(--clr-dark);
 	color: white;
 	font-size: var(--fs-200);
+	text-align: center;
+}
+
+.btn__schedule {
+	display: inline-block;
+	cursor: pointer;
+	width: 12rem;
+	height: 2.6rem;
+
+	padding: 0.5em 1.5rem 0.5em 3rem;
+	border-radius: 2rem;
+	border: none;
+	background: var(--clr-dark);
+	color: white;
+	margin-left: 1em;
+	font-size: var(--fs-200);
+	position: relative;
+}
+
+.btn__schedule i {
+	background-color: var(--clr-light);
+	display: inline-block;
+	width: 2.6rem;
+	height: 2.6rem;
+	text-align: center;
+	line-height: 40px;
+	border-radius: 50%;
+	position: absolute;
+	left: 0;
+	top: 0;
 }
 
 .li__email,
@@ -202,35 +255,6 @@ li {
 	color: var(--clr-light);
 }
 
-.schedule__button {
-	display: inline-block;
-	cursor: pointer;
-	width: 100%;
-	height: 2.6rem;
-
-	padding: 0.5em 1.5rem 0.5em 3rem;
-	border-radius: 2rem;
-	border: none;
-	background: var(--clr-dark);
-	color: white;
-	margin-left: 1em;
-	font-size: var(--fs-200);
-	position: relative;
-}
-
-.schedule__button i {
-	background-color: var(--clr-light);
-	display: inline-block;
-	width: 2.6rem;
-	height: 2.6rem;
-	text-align: center;
-	line-height: 40px;
-	border-radius: 50%;
-	position: absolute;
-	left: 0;
-	top: 0;
-}
-
 .nav__items {
 	display: none;
 	align-items: center;
@@ -240,6 +264,7 @@ li {
 section {
 	margin-bottom: 5rem;
 }
+
 /* Hero section */
 .hero {
 	width: 100%;
@@ -255,7 +280,6 @@ section {
 }
 
 /* Deal section */
-
 .info__table {
 	border-radius: 10px;
 	box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
@@ -292,4 +316,69 @@ section {
 	font-weight: 700;
 	color: var(--clr-dark);
 	margin-left: 5rem;
+}
+
+.best__deal p {
+	margin: 1em 0;
+	line-height: 1.5;
+}
+
+.best__deal button {
+	margin-left: 0;
+}
+
+/* Contact section */
+fieldset {
+	border: none;
+}
+.contact-content #contact-form {
+	margin: 0 auto;
+	border-radius: 10px;
+	box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
+	padding: 2rem 1.875rem;
+	background-color: #fff;
+}
+
+.contact-content #contact-form label {
+	font-size: var(--fs-300);
+	color: var(--rich-gray);
+	margin-bottom: 1rem;
+}
+
+.contact-content #contact-form input {
+	width: 100%;
+	height: 2.5em;
+	border-radius: 5px;
+	background-color: #f6f6f6;
+	border: none;
+	margin-bottom: 1.875rem;
+	font-size: var(--fs-300);
+	padding: 0px 15px;
+}
+
+.contact-content #contact-form textarea {
+	width: 100%;
+	height: auto;
+	max-height: 11.25rem;
+	border-radius: 22px;
+	background-color: #f6f6f6;
+	border: none;
+	margin-bottom: 2.5rem;
+	font-size: var(--fs-300);
+	padding: 0.938rem 0.938rem;
+}
+
+/* Footer section */
+.footer__section {
+	margin: 0 auto;
+	padding: 0;
+	background-color: var(--rich-black);
+}
+
+.footer__section,
+ul,
+li,
+p {
+	color: white;
+	text-align: center;
 }
