--- a/style.css
+++ b/style.css
@@ -278,6 +278,19 @@ section {
 .featured > img {
 	margin: 0 auto;
 }
+a
+
+/* Property Section */
+.card {
+	background-color: rgb(187, 183, 183);
+	border-radius: 0.5em;
+	padding: 2rem;
+	border: 5px solid red;
+}
+
+.card img {
+	border-radius: 1em;
+}
 
 /* Deal section */
 .info__table {
@@ -332,13 +345,47 @@ section > .container {
 	padding-bottom: 4rem;
 }
 
-.contact-content .google-map {
+.contact-section .image-container {
+	background-image: url("images/contact-bg.jpg");
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center center;
+	padding: 25vh 0;
+	position: relative;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+
+.contact-section > img {
+	width: 100%;
+}
+
+.contact-section .section__subhead {
+	position: absolute;
+	top: 0;
+}
+
+.contact-section h2 {
+	font-weight: 600;
+	position: absolute;
+	color: #fff;
+	top: 1.75em;
+	padding: 0 1em;
+}
+
+.contact__content {
+	margin-top: -15em;
+	z-index: 100;
+}
+
+.contact__content .google-map {
 	padding-bottom: 100%;
 	position: relative;
 	margin-bottom: 2em;
 }
 
-.contact-content .google-map iframe {
+.contact__content .google-map iframe {
 	height: 100%;
 	width: 100%;
 	left: 0;
@@ -355,7 +402,7 @@ fieldset {
 	flex-direction: column;
 }
 
-.contact-content .item {
+.contact__content .item {
 	border-radius: 10px;
 	box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
 	padding: 0.5rem 10px;
@@ -364,17 +411,12 @@ fieldset {
 	justify-content: center;
 }
 
-.contact-content > img {
+.contact__content > img {
 	width: 10%;
 	height: auto;
 }
 
-.contact-content h4 {
-	font-size: var(--fs-400);
-	font-weight: 600;
-}
-
-.contact-content #contact-form {
+.contact__content #contact-form {
 	margin: 0 auto;
 	border-radius: 10px;
 	box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
@@ -384,13 +426,13 @@ fieldset {
 	align-items: center;
 }
 
-.contact-content #contact-form label {
+.contact__content #contact-form label {
 	font-size: var(--fs-300);
 	color: var(--rich-gray);
 	margin-bottom: 1rem;
 }
 
-.contact-content #contact-form input {
+.contact__content #contact-form input {
 	width: 100%;
 	height: 2.5em;
 	border-radius: 5px;
@@ -401,7 +443,7 @@ fieldset {
 	padding: 0px 15px;
 }
 
-.contact-content #contact-form textarea {
+.contact__content #contact-form textarea {
 	width: 100%;
 	height: auto;
 	max-height: 11.25rem;
