--- a/style.css
+++ b/style.css
@@ -9,33 +9,10 @@
 	--clr-white: 0 0% 100%;
 	--clr-blue: #023047;
 	--clr-light-blue: #8ecae6;
-
-	/* CSS HEX */
-	--sky-blue: #8ecae6ff;
-	--blue-green: #219ebcff;
-	--prussian-blue: #023047ff;
-	--selective-yellow: #ffb703ff;
-	--ut-orange: #fb8500ff;
+	--clr-rich-gray: rgb(244, 241, 241);
 
 	/* CSS HSL */
-	--sky-blue: hsla(199, 64%, 73%, 1);
-	--blue-green: hsla(192, 70%, 43%, 1);
-	--prussian-blue: hsla(200, 95%, 14%, 1);
-	--selective-yellow: hsla(43, 100%, 51%, 1);
-	--ut-orange: hsla(32, 100%, 49%, 1);
-
-	/* CSS HEX */
-	--rich-black: #000814ff;
-	--rich-gray: rgb(187, 183, 183);
-	--oxford-blue: #001d3dff;
-	--yale-blue: #003566ff;
-
-	/* CSS HSL */
-	--rich-black: hsla(216, 100%, 4%, 1);
-	--oxford-blue: hsla(211, 100%, 12%, 1);
-	--yale-blue: hsla(209, 100%, 20%, 1);
-	--mikado-yellow: hsla(46, 100%, 50%, 1);
-	--gold: hsla(50, 100%, 52%, 1);
+	--clr-rich-black: hsla(216, 100%, 4%, 1);
 
 	/* font-sizes */
 	--fs-900: clamp(5rem, 8vw + 1rem, 9.375rem);
@@ -278,18 +255,34 @@ section {
 .featured > img {
 	margin: 0 auto;
 }
-a
 
 /* Property Section */
-.card {
-	background-color: rgb(187, 183, 183);
+/* .property__cards {
+	border: 5px solid red;
+} */
+
+.property__cards .card {
+	background-color: var(--clr-rich-gray);
 	border-radius: 0.5em;
 	padding: 2rem;
-	border: 5px solid red;
 }
 
 .card img {
-	border-radius: 1em;
+	border-radius: 0.5em;
+	margin-bottom: 1em;
+}
+
+.property__cards .card__header {
+	justify-content: space-between;
+	align-items: center;
+}
+
+.property__cards h6 {
+	margin: 0;
+}
+
+.property__cards h4 {
+	margin: 1em 0;
 }
 
 /* Deal section */
