--- a/style.css
+++ b/style.css
@@ -257,14 +257,14 @@ section {
 }
 
 /* Property Section */
-/* .property__cards {
-	border: 5px solid red;
-} */
 
 .property__cards .card {
 	background-color: var(--clr-rich-gray);
 	border-radius: 0.5em;
 	padding: 2rem;
+	max-width: 21.75rem;
+	margin-bottom: 2em;
+	flex-direction: column;
 }
 
 .card img {
@@ -277,15 +277,42 @@ section {
 	align-items: center;
 }
 
+.property__cards .card__flag {
+	background-color: var(--clr-light);
+	color: #fff;
+	font-weight: 500;
+	font-size: var(--fs-300);
+	padding: 0.313rem 0.75rem;
+}
+
 .property__cards h6 {
 	margin: 0;
 }
 
 .property__cards h4 {
 	margin: 1em 0;
+	font-weight: 700;
+}
+
+.property__cards .card__description {
+	font-size: var(--fs-200);
+	font-weight: 200;
+	margin-bottom: 2em;
+}
+
+.property__cards .card__description span {
+	font-size: var(--fs-200);
+	font-weight: 500;
+}
+
+.property__cards .btn__schedule {
+	margin: 0 auto;
 }
 
 /* Deal section */
+.best__deal {
+	background-color: var(--clr-rich-gray);
+}
 .info__table {
 	border-radius: 10px;
 	box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
@@ -299,14 +326,13 @@ section {
 }
 
 .info__table ul li {
-	display: block;
 	margin-bottom: 24px;
 	padding-bottom: 24px;
-	border-bottom: 1px solid var(--rich-gray);
+	border-bottom: 1px solid var(--clr-rich-gray);
 	text-align: left;
-	font-size: var(--fs-400);
+	font-size: var(--fs-200);
 	font-weight: 400;
-	color: var(--rich-gray);
+	color: var(--clr-rich-black);
 	display: flex;
 	justify-content: space-between;
 }
@@ -318,7 +344,7 @@ section {
 }
 
 .info__table ul li span {
-	font-size: 1.25rem;
+	font-size: var(--fs-400);
 	font-weight: 700;
 	color: var(--clr-dark);
 	margin-left: 5rem;
@@ -327,10 +353,16 @@ section {
 .best__deal p {
 	margin: 1em 0;
 	line-height: 1.5;
+	color: var(--clr-dark);
+	text-align: left;
+}
+
+.best__deal img {
+	margin-bottom: 1em;
 }
 
 .best__deal button {
-	margin-left: 0;
+	margin: 2em 0;
 }
 
 /* Contact section */
