--- a/style.css
+++ b/style.css
@@ -267,6 +267,45 @@ section {
 	color: var(--clr-rich-black);
 	text-align: left;
 }
+
+.featured__table {
+	border-radius: 10px;
+	box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
+	padding: 2rem;
+	margin: 2rem auto;
+	max-width: 363px;
+}
+
+.featured__table ul {
+	padding-left: 0;
+	color: var(--clr-rich-black);
+}
+
+.featured__table ul li {
+	margin-bottom: 24px;
+	padding-bottom: 24px;
+	border-bottom: 1px solid var(--clr-rich-gray);
+	text-align: left;
+	font-size: var(--fs-200);
+	font-weight: 400;
+	color: inherit;
+	/* display: flex;
+	justify-content: space-between; */
+}
+
+.featured__table ul li:last-child {
+	border-bottom: none;
+	padding-bottom: 0;
+	margin-bottom: 0;
+}
+
+.featured__table ul li span {
+	font-size: var(--fs-300);
+	font-weight: 700;
+	color: inherit;
+	margin-left: 5rem;
+}
+
 /* Video Section */
 .video__section .image-container {
 	background-image: url("images/video-bg.jpg");
@@ -392,6 +431,7 @@ section {
 .best__deal {
 	background-color: var(--clr-rich-gray);
 }
+
 .info__table {
 	border-radius: 10px;
 	box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
