--- a/style.css
+++ b/style.css
@@ -914,16 +914,22 @@ p {
 
 	.deal__image {
 		width: 55%;
+		margin-right: 1em;
 	}
 
-	aside .info__table {
+	.info__table {
 		width: 40%;
-		margin-top: 0;
+		padding: 1.5rem;
+		margin: 1.5rem 0;
 	}
 
 	.info__table ul li {
 		margin-bottom: 15px;
 		padding-bottom: 15px;
+	}
+
+	.info__table ul li span {
+		margin-left: 4rem;
 	}
 
 	.details__container {
